test_src/compiler_errors/literals/IntTooLargeError3.b
class IntTooLargeError3 {
    void test() {
        println(0x1234abcd12);
    }
}
